--- a/.travis.yml
+++ b/.travis.yml
@@ -1,4 +1,42 @@
+# -*- coding: utf-8 -*-
+##
+## This file is part of Invenio-Kwalitee
+## Copyright (C) 2014 CERN.
+##
+## Invenio-Kwalitee is free software; you can redistribute it and/or
+## modify it under the terms of the GNU General Public License as
+## published by the Free Software Foundation; either version 2 of the
+## License, or (at your option) any later version.
+##
+## Invenio-Kwalitee is distributed in the hope that it will be useful, but
+## WITHOUT ANY WARRANTY; without even the implied warranty of
+## MERCHANTABILITY or FITNESS FOR A PARTICULAR PURPOSE.  See the GNU
+## General Public License for more details.
+##
+## You should have received a copy of the GNU General Public License
+## along with Invenio-Kwalitee; if not, write to the Free Software Foundation,
+## Inc., 59 Temple Place, Suite 330, Boston, MA 02111-1307, USA.
+##
+## In applying this licence, CERN does not waive the privileges and immunities
+## granted to it by virtue of its status as an Intergovernmental Organization
+## or submit itself to any jurisdiction.
+
 language: python
+
 python:
  - "2.7"
-script: python setup.py nosetests
+ - "3.3"
+
+install:
+  - pip install --upgrade pip  --use-mirrors
+  - pip install coveralls --use-mirrors
+  - pip install .
+
+script:
+  - coverage run --source=invenio_kwalitee setup.py test
+
+after_success:
+  - coveralls
+
+notifications:
+  email: false
