travis: testing python 3.4
* Moving the requirements to text files.

* Using travis_retry to bypass Python 3.4 issues.

Signed-off-by: Yoan Blanc <yoan.blanc@cern.ch>

--- a/tox.ini
+++ b/tox.ini
@@ -1,9 +1,6 @@
 [tox]
-envlist = py26, py27, py33
+envlist = py26, py27, py33, py34
 
 [testenv]
-commands =
-    {envpython} setup.py test
-deps =
-    nose
-    sphinx
+commands = {envpython} setup.py nosetests
+deps = nose
