--- a/.travis.yml
+++ b/.travis.yml
@@ -27,11 +27,14 @@ python:
  - "2.6"
  - "2.7"
  - "3.3"
+ - "3.4"
 
 install:
   - pip install --upgrade pip  --use-mirrors
+  - travis_retry pip install -r requirements.txt
+  - travis_retry pip install -r requirements-test.txt
+  - pip install -e .
   - pip install coveralls --use-mirrors
-  - pip install .
 
 script:
   - coverage run --source=invenio_kwalitee setup.py test
