--- a/.coveragerc
+++ b/.coveragerc
@@ -14,10 +14,15 @@ exclude_lines =
     # Don't complain if tests don't hit defensive assertion code:
     raise AssertionError
     raise NotImplementedError
+    # HTTP exception catching
+    except requests\.RequestException:
 
     # Don't complain if non-runnable code isn't run:
     if 0:
     if __name__ == .__main__.:
+
+    # ignore filesystem directory creation
+    os\.makedirs
 
 [html]
 directory = html_coverage_report
