--- a/.travis.yml
+++ b/.travis.yml
@@ -33,10 +33,10 @@ install:
   - pip install --upgrade pip  --use-mirrors
   - travis_retry pip install -r requirements.txt
   - travis_retry pip install -r requirements-docs.txt
-  - travis_retry pip install coverage coveralls httpretty mock nose pyhamcrest --use-mirrors
+  - travis_retry pip install coveralls pytest --use-mirrors
 
 script:
-  - coverage run --source=invenio_kwalitee setup.py test && sphinx-build -vnNW docs _build
+    - python setup.py test -a "tests --cov-config .coveragerc --cov-report term-missing" && sphinx-build -vnNW docs _build
 
 after_success:
   - coveralls
