--- a/tox.ini
+++ b/tox.ini
@@ -2,5 +2,5 @@
 envlist = py26, py27, py33, py34
 
 [testenv]
-commands = {envpython} setup.py nosetests
-deps = nose
+commands = {envpython} setup.py test
+deps = pytest
