global: flake8 and python2 fixes
Signed-off-by: Yoan Blanc <yoan.blanc@cern.ch>

--- a/.coveragerc
+++ b/.coveragerc
@@ -1,6 +1,9 @@
 [run]
 branch = True
-omit = docs/*
+omit =
+    docs/*
+    *.html
+    *.test
 
 [report]
 # Regexes for lines to exclude from consideration
