--- a/.travis.yml
+++ b/.travis.yml
@@ -29,8 +29,24 @@ python:
  - "3.3"
  - "3.4"
 
+env:
+  global:
+    - LD_LIBRARY_PATH="/usr/local/lib:$LD_LIBRARY_PATH"
+  matrix:
+    - WITH_PYGIT2=true
+    - WITH_PYGIT2=false
+
 install:
-  - pip install --upgrade pip  --use-mirrors
+  - sudo apt-get install -qy python-dev libffi-dev cmake
+  - pip install --upgrade pip --use-mirrors
+  # libgit2-dev isn't available from ubuntu, and ppa:dennis doesn't work with
+  # the Ubuntu LTS version travis is using.
+  - $WITH_PYGIT2 && wget https://github.com/libgit2/libgit2/archive/v0.21.0.tar.gz || true
+  - $WITH_PYGIT2 && tar xzf v0.21.0.tar.gz || true
+  - $WITH_PYGIT2 && cd libgit2-0.21.0/ || true
+  - $WITH_PYGIT2 && cmake . && make && sudo make install || true
+  - $WITH_PYGIT2 && cd .. || true
+  - $WITH_PYGIT2 && pip install cffi pygit2 --use-mirrors || true
   - travis_retry pip install -r requirements.txt
   - travis_retry pip install -r requirements-docs.txt
   - travis_retry pip install coveralls pytest --use-mirrors
