docker: initial configuration
Signed-off-by: Jiri Kuncar <jiri.kuncar@cern.ch>

--- a/fig.yml
+++ b/fig.yml
@@ -1,7 +1,7 @@
 # -*- coding: utf-8 -*-
 ##
 ## This file is part of kwalitee
-## Copyright (C) 2014, 2015 CERN.
+## Copyright (C) 2015 CERN.
 ##
 ## kwalitee is free software; you can redistribute it and/or
 ## modify it under the terms of the GNU General Public License as
@@ -21,35 +21,25 @@
 ## granted to it by virtue of its status as an Intergovernmental Organization
 ## or submit itself to any jurisdiction.
 
-"""Initialize Redis and setups the RQ worker."""
-
-from __future__ import absolute_import
-
-from os import environ
-from redis import Redis
-from rq import Connection, Queue, Worker
-
-conn = Redis(host=environ.get('REDIS_HOST', 'localhost'))
-
-
-def init_app(app):
-    """Initialize the RQ queue."""
-    queue = Queue(connection=conn)
-    app.config["queue"] = queue
-    return app
-
-
-if __name__ == "__main__":
-    import sys
-    import logging
-
-    from .wsgi import application
-
-    with application.app_context():
-        if tuple(sys.version_info) < (2, 7):
-            logger = logging.getLogger("rq.worker")
-            logger.setLevel(logging.DEBUG)
-            logger.addHandler(logging.StreamHandler())
-        with Connection(conn):
-            worker = Worker(list(map(Queue, ('high', 'default', 'low'))))
-            worker.work()
+web:
+  build: .
+  command: kwalitee runserver -p 5000
+  ports:
+   - "5000:5000"
+  environment:
+   - REDIS_HOST=redis
+  volumes:
+   - .:/code
+  links:
+   - redis
+worker:
+  build: .
+  command: python -m kwalitee.worker
+  environment:
+   - REDIS_HOST=redis
+  volumes:
+   - .:/code
+  links:
+   - redis
+redis:
+  image: redis
