--- a/fig.yml
+++ b/fig.yml
@@ -28,20 +28,26 @@ web:
    - "5000:5000"
   environment:
    - REDIS_HOST=redis
-   - KWALITEE_INSTANCE_PATH=/code/instance
+   - SQLALCHEMY_DATABASE_URI=postgres://postgres:postgres@db:5432/postgres
+   - KWALITEE_INSTANCE_PATH=/tmp
   volumes:
-   - .:/code
+   - /tmp
   links:
+   - db
    - redis
 worker:
   build: .
   command: python -m kwalitee.worker
   environment:
    - REDIS_HOST=redis
-   - KWALITEE_INSTANCE_PATH=/code/instance
-  volumes:
-   - .:/code
+   - SQLALCHEMY_DATABASE_URI=postgres://postgres:postgres@db:5432/postgres
+   - KWALITEE_INSTANCE_PATH=/tmp
+  volumes_from:
+   - web
   links:
+   - db
    - redis
 redis:
   image: redis
+db:
+  image: postgres
