--- a/.tx/config
+++ b/.tx/config
@@ -1,7 +1,7 @@
 # -*- coding: utf-8 -*-
 #
 # This file is part of kwalitee.
-# Copyright (C) 2015, 2016 CERN.
+# Copyright (C) 2016 CERN.
 #
 # kwalitee is free software; you can redistribute it
 # and/or modify it under the terms of the GNU General Public License as
@@ -23,31 +23,28 @@
 # as an Intergovernmental Organization or submit itself to any jurisdiction.
 
 
-[aliases]
-test=pytest
+# TODO: Transifex integration
+#
+# 1) Create message catalog:
+#    $ python setup.py extract_messages
+#    $ python setup.py init_catalog -l <lang>
+#    $ python setup.py compile_catalog
+# 2) Ensure project has been created on Transifex under the inveniosoftware
+#    organisation.
+# 3) Install the transifex-client
+#    $ pip install transifex-client
+# 4) Push source (.pot) and translations (.po) to Transifex
+#    $ tx push -s -t
+# 5) Pull translations for a single language from Transifex
+#    $ tx pull -l <lang>
+# 6) Pull translations for all languages from Transifex
+#    $ tx pull -a
 
-[build_sphinx]
-source-dir = docs/
-build-dir = docs/_build
-all_files = 1
+[main]
+host = https://www.transifex.com
 
-[bdist_wheel]
-universal = 1
-
-[compile_catalog]
-directory = kwalitee/translations/
-
-[extract_messages]
-copyright_holder = CERN
-msgid_bugs_address = info@invenio-software.org
-mapping-file = babel.ini
-output-file = kwalitee/translations/messages.pot
-add-comments = NOTE
-
-[init_catalog]
-input-file = kwalitee/translations/messages.pot
-output-dir = kwalitee/translations/
-
-[update_catalog]
-input-file = kwalitee/translations/messages.pot
-output-dir = kwalitee/translations/
+[kwalitee.messagespot]
+file_filter = kwalitee/translations/<lang>/LC_MESSAGES/messages.po
+source_file = kwalitee/translations/messages.pot
+source_lang = en
+type = PO
