--- a/requirements-devel.txt
+++ b/requirements-devel.txt
@@ -1,7 +1,7 @@
 # -*- coding: utf-8 -*-
 #
 # This file is part of kwalitee.
-# Copyright (C) 2015, 2016 CERN.
+# Copyright (C) 2016 CERN.
 #
 # kwalitee is free software; you can redistribute it
 # and/or modify it under the terms of the GNU General Public License as
@@ -21,33 +21,3 @@
 # In applying this license, CERN does not
 # waive the privileges and immunities granted to it by virtue of its status
 # as an Intergovernmental Organization or submit itself to any jurisdiction.
-
-
-[aliases]
-test=pytest
-
-[build_sphinx]
-source-dir = docs/
-build-dir = docs/_build
-all_files = 1
-
-[bdist_wheel]
-universal = 1
-
-[compile_catalog]
-directory = kwalitee/translations/
-
-[extract_messages]
-copyright_holder = CERN
-msgid_bugs_address = info@invenio-software.org
-mapping-file = babel.ini
-output-file = kwalitee/translations/messages.pot
-add-comments = NOTE
-
-[init_catalog]
-input-file = kwalitee/translations/messages.pot
-output-dir = kwalitee/translations/
-
-[update_catalog]
-input-file = kwalitee/translations/messages.pot
-output-dir = kwalitee/translations/
