cli: author checking encoding fix
* FIX Fixes invalid encoding problems in author checking. (closes #87)

* Completes the alternative author names to exclude so that the author
  checking works fully in this very repository.
  (`kwalitee check authors adf1d899..`)

Signed-off-by: Tibor Simko <tibor.simko@cern.ch>

--- a/.kwalitee.yml
+++ b/.kwalitee.yml
@@ -10,3 +10,7 @@ components:
 - tests
 - travis
 - views
+exclude_author_names:
+- Jiri Kuncar <jiri.kuncar@gmail.com>
+- Mateusz Susik <mateusz.susik@cern.ch>
+- Yoan Blanc <yoan.blanc@cern.ch>
