--- a/setup.cfg
+++ b/setup.cfg
@@ -39,7 +39,7 @@ directory = kwalitee/translations/
 
 [extract_messages]
 copyright_holder = CERN
-msgid_bugs_address = info@invenio-software.org
+msgid_bugs_address = info@inveniosoftware.org
 mapping-file = babel.ini
 output-file = kwalitee/translations/messages.pot
 add-comments = NOTE
