global: addition of new author
Signed-off-by: Jiri Kuncar <jiri.kuncar@cern.ch>

--- a/.kwalitee.yml
+++ b/.kwalitee.yml
@@ -11,6 +11,7 @@ components:
 - travis
 - views
 exclude_author_names:
+- David Caro <dcaroest@redhat.com>
 - Jiri Kuncar <jiri.kuncar@gmail.com>
 - Mateusz Susik <mateusz.susik@cern.ch>
 - Yoan Blanc <yoan.blanc@cern.ch>
