docs: MAINTAINERS file and LGTM configuration
* Adds the MAINTAINERS file and the initial LGTM configuration.

Signed-off-by: Tibor Simko <tibor.simko@cern.ch>

--- a/MANIFEST.in
+++ b/MANIFEST.in
@@ -33,6 +33,7 @@ include .editorconfig
 include .tx/config
 include Dockerfile
 include LICENSE
+include MAINTAINERS
 include Procfile
 include docs/*.rst docs/*.py
 include requirements*.txt
